prevent overflow

--- a/src/css/components/Calendar.css
+++ b/src/css/components/Calendar.css
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   margin-bottom: var(--b);
-  transition: all 0.2s;
+  transition: height 0.2s;
+  overflow: hidden;
 }
 
 .calendar-weekdays,
